--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 </head>
 <body>
 
-    <h1>Hola Mundo!</h1>
+    <h1>Hola Mundo con h1!</h1>
+    <h1>Hola Mundo con h2!</h1>
     
 </body>
 </html>
