--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h4>Hola Mundo con h4!</h4>
     <h5>Hola Mundo con h5!</h5>
 
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste voluptatum accusamus molestias et cum voluptate adipisci commodi illum laboriosam recusandae amet voluptatibus atque odit, magnam officia quam, itaque natus perferendis?</p>
+    <p>Iste voluptatum accusamus molestias et cum voluptate adipisci commodi illum laboriosam recusandae amet voluptatibus atque odit, magnam officia quam, itaque natus perferendis?</p>
     <p>Asperiores temporibus porro libero eos odit in! Debitis natus et facilis repellat nihil, odit corrupti voluptatum harum suscipit placeat dicta aut accusantium.</p>
     <p>11111. Quibusdam exercitationem laudantium tempore repellendus dolor voluptate earum reiciendis veniam nemo cum perspiciatis, repellat accusantium natus, in minus laboriosam labore eveniet! Nihil!</p>
 
